Bug 90906 - FILEOPEN: DOCX - Incorrect text highlight color in table header
Summary: FILEOPEN: DOCX - Incorrect text highlight color in table header
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:6.2.0
Keywords: filter:docx, preBibisect, regression
Depends on:
Blocks: DOCX-Tables
  Show dependency treegraph
 
Reported: 2015-04-28 07:41 UTC by Janusz
Modified: 2020-10-23 05:58 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
example of the bug (36.60 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2015-04-28 07:41 UTC, Janusz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Janusz 2015-04-28 07:41:53 UTC
Created attachment 115153 [details]
example of the bug
Comment 1 Janusz 2015-04-28 07:44:35 UTC
Opening DOCX document with table, where there is a header background color set as grey, text formatted as auto - Libre Office present text on white background (should be gray or transparent).

This is only related to a document in docx format, exporting same document from word to  old doc format, then opening it in libre office shows proper formatting
Comment 2 Yousuf Philips (jay) (retired) 2015-04-28 12:06:35 UTC
Hello Janusz,

Thank you for submitting the bug. I can confirm that the bug is available in 3.5.7, 4.0.6 and master on Linux.

Its a regression as it doesnt happen in 3.3.0.

Version: 5.0.0.0.alpha1+
Build ID: badec7478035008f514e0976a94438fe2e32dc40
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2015-04-22_00:50:58
Comment 3 Alex Thurgood 2015-04-28 12:07:21 UTC
Version: 5.0.0.0.alpha1+
Build ID: 950055bcb06c8edcd9062c71184f02bf8e0604e6
Locale : fr_

Confirming

Apple Pages 5.5.2 : displays the docx table header text correctly
Word 15.8.0 (Preview) : displays the docx table header text correctly

Confirming
Comment 4 Robinson Tryon (qubit) 2015-12-14 05:32:34 UTC Comment hidden (obsolete)
Comment 5 Joel Madero 2015-12-14 20:42:55 UTC
Happened before bibisect is available (before 3.5.beta0)
Comment 6 Xisco Faulí 2016-09-14 15:32:11 UTC
Changing version to 3.5.0 as mentioned in comment 5 and adding keyword 'preBibisect'
Comment 7 Buovjaga 2018-03-14 14:29:34 UTC
Repro.

See Character formatting - Highlight. It is white instead of no fill.

Arch Linux 64-bit
Version: 6.1.0.0.alpha0+
Build ID: a7bb853b348cc5ebe4ccdb07d1ee0fc38de21e7a
CPU threads: 8; OS: Linux 4.15; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on March 14th 2018
Comment 8 Justin L 2018-08-18 19:26:42 UTC
The white character background comes from the Normal style w:fill.

<w:style w:type="paragraph" w:default="1" w:styleId="Normal">
  <w:color w:val="000000"/><w:shd w:val="clear" w:color="auto" w:fill="FFFFFF"/>

The cells are trying to override it with w:fill="auto", but AutoFillColor is being ignored.

    else if ((nWW8BrushStyle || !m_bAutoFillColor))
    {
        pPropertyMap->Insert( m_OutputFormat == Form ? PROP_BACK_COLOR
                            : PROP_CHAR_BACK_COLOR, uno::makeAny( nApplyColor ));
Comment 9 Justin L 2018-08-20 12:20:18 UTC
proposed fix at https://gerrit.libreoffice.org/59313
Comment 10 Justin L 2018-08-22 15:58:02 UTC
(In reply to Justin L from comment #9)
> proposed fix at https://gerrit.libreoffice.org/59313
Depends on additional patch to bug 91292
Comment 11 Commit Notification 2018-09-05 08:18:00 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7d9e9ecd5bb5d5abec338c2ceb61ad623d2ac5cb

tdf#90906 writerfilter: Allow COL_AUTO to override non-auto

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Justin L 2018-09-05 09:18:04 UTC
This could be backported if desired, since the patch it depends on was backported. But I'm not planning on backporting since it seems like a rare need.
Comment 13 Buovjaga 2018-09-05 10:18:23 UTC
Thanks, verified!

Arch Linux 64-bit
Version: 6.2.0.0.alpha0+
Build ID: 3c86ffd8ded628e6f2b4187948a1b1056f6a0f56
CPU threads: 8; OS: Linux 4.18; UI render: default; VCL: gtk3_kde5; 
Locale: fi-FI (fi_FI.UTF-8); Calc: threaded
Built on September 5th 2018