tdf#90906 writerfilter: bAllowCOL_AUTO to override non-auto

If the inherited properties define a non-auto color, then
a specified COL_AUTO needs to be returned, otherwise the
inherited value will be used instead of using the background
color.

Change-Id: I1a043d2224b164c6c411ce2e46d899212f2b7f3d